--- a/java核心技术学习整理-2/18.web基础/demoServlet/web/WEB-INF/web.xml
+++ b/java核心技术学习整理-2/18.web基础/demoServlet/web/WEB-INF/web.xml
@@ -4,9 +4,35 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+    <filter>
+        <filter-name>SessionFilter</filter-name>
+        <filter-class>com.servle.Filter.SessionFilter</filter-class>
+        <init-param>
+            <param-name>logonStrings</param-name><!-- 对登录页面不进行过滤 -->
+            <param-value>/index.jsp;login.do</param-value>
+        </init-param>
+        <init-param>
+            <param-name>includeStrings</param-name><!-- 只对指定过滤参数后缀进行过滤 -->
+            <param-value>.do;.jsp</param-value>
+        </init-param>
+        <init-param>
+            <param-name>redirectPath</param-name><!-- 未通过跳转到登录界面 -->
+            <param-value>/index.jsp</param-value>
+        </init-param>
+        <init-param>
+            <param-name>disabletestfilter</param-name><!-- Y:过滤无效 -->
+            <param-value>N</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>SessionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
-
-
+    <context-param>
+        <param-name>servlet</param-name>
+        <param-value>/WEB-INF/test.xml</param-value>
+    </context-param>
 
     <!--配置servlet-->
     <servlet>
@@ -21,4 +47,5 @@
         <servlet-name>initServlet</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+
 </web-app>
