--- a/java核心技术学习整理-2/2.1反射&代理/proxyTest/pom.xml
+++ b/java核心技术学习整理-2/2.1反射&代理/proxyTest/pom.xml
@@ -7,6 +7,18 @@
     <groupId>proxyTest</groupId>
     <artifactId>proxyTest</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.mockito</groupId>-->
+            <!--<artifactId>mockito-core</artifactId>-->
+            <!--<version>1.10.19</version>-->
+        <!--</dependency>-->
+    </dependencies>
 
 
 </project>
