--- a/java核心技术学习整理-2/spring/springDemo/pom.xml
+++ b/java核心技术学习整理-2/spring/springDemo/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>spring-aop</artifactId>
             <version>4.3.10.RELEASE</version>
         </dependency>
+        <!-- spring jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>4.3.10.RELEASE</version>
+        </dependency>
         <!--使用AspectJ方式注解需要相应的包-->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -37,5 +43,18 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.6.11</version>
         </dependency>
+        <!-- mysql连接 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+        <!-- 数据源 c3p0 -->
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.5</version>
+        </dependency>
+
     </dependencies>
 </project>
