--- a/java核心技术学习整理-2/mybatis/mybatisDemo/pom.xml
+++ b/java核心技术学习整理-2/mybatis/mybatisDemo/pom.xml
@@ -9,6 +9,20 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+
+        <!-- mysql连接 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+        </dependency>
+        <!--log4j-->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <!--mybatis-->
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
