--- a/java核心技术学习整理-2/mybatis/mybatisDemo/pom.xml
+++ b/java核心技术学习整理-2/mybatis/mybatisDemo/pom.xml
@@ -28,5 +28,17 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.1</version>
         </dependency>
+
     </dependencies>
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+    </build>
 </project>
