--- a/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>spring-webmvc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+        <!-- spring jdbc -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
 
         <!--mybatis依赖 -->
         <dependency>
