--- a/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
@@ -5,6 +5,20 @@
     http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
+    <!--加载spring容器-->
+    <context-param>
+        <param-name>contextLoaderListener</param-name>
+        <param-value>classpath:spring/applicationContext-*.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
+
+
+
     <!--
     spring mvc处理流程：
 
