--- a/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
@@ -5,17 +5,23 @@
     http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <!--加载spring容器-->
+    <!--
+        加载spring容器,并初始化spring上下文监听
+            必须使用<param-name>contextConfigLoction</param-name>此名称，
+            否则那么spring的ContextLoderListener监听器就会在/WEB-INF/下去
+            寻找并加载该目录下的名为applicationContext.xml这个文件
+    -->
     <context-param>
-        <param-name>contextLoaderListener</param-name>
+        <param-name>contextConfigLocation</param-name>
         <param-value>classpath:spring/applicationContext-*.xml</param-value>
     </context-param>
-
     <listener>
         <listener-class>
             org.springframework.web.context.ContextLoaderListener
         </listener-class>
     </listener>
+
+
 
 
 
@@ -58,6 +64,9 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <!--
             如果不配置这个文件的话，那么默认加载/WEB-INF/servlet名称-servlet.xml
+            如果使用maven的话必须使用<context-param>先加载一次文件
+            参考：
+            https://blog.csdn.net/wlwlwlwl015/article/details/48134763
         -->
         <init-param>
             <param-name>contextConfigLocation</param-name>
