--- a/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
@@ -82,6 +82,12 @@
             <version>${spring.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.geronimo.bundles</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.6.8_2</version>
+        </dependency>
+
         <!--mybatis依赖 -->
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -108,6 +114,14 @@
             <artifactId>commons-dbcp</artifactId>
             <version>${commons-dbcp.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+        <!--<dependency>-->
+            <!--<groupId>c3p0</groupId>-->
+            <!--<artifactId>c3p0</artifactId>-->
+            <!--<version>0.9.1.2</version>-->
+        <!--</dependency>-->
+
 
         <!--其他需要的包-->
         <dependency>
