--- a/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
@@ -86,6 +86,6 @@
                 /*,不对，因为使用这种配置最终将要转发一个jsp页面时仍然会由DispatcherServlet进行解析，
                         不能根据jsp页面找到handler，会报错
         -->
-        <url-pattern>*.do</url-pattern>
+        <url-pattern>*.action</url-pattern>
     </servlet-mapping>
 </web-app>
