--- a/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
@@ -45,11 +45,11 @@
         </dependency>
 
         <!--j2ee相关包 servlet、jsp、jstl-->
-        <!--<dependency>-->
-        <!--<groupId>javax.servlet</groupId>-->
-        <!--<artifactId>javax.servlet-api</artifactId>-->
-        <!--<version>3.1.0</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>javax.servlet.jsp</groupId>-->
         <!--<artifactId>jsp-api</artifactId>-->
