--- a/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/src/webapp/WEB-INF/web.xml
@@ -21,10 +21,6 @@
         </listener-class>
     </listener>
 
-
-
-
-
     <!--
     spring mvc处理流程：
 
@@ -88,4 +84,21 @@
         -->
         <url-pattern>*.action</url-pattern>
     </servlet-mapping>
+
+    <!--字符编码过滤器-->
+    <filter>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>utf-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>CharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+
+
 </web-app>
