--- a/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
+++ b/java核心技术学习整理-2/spring/springMyBatisDemo/pom.xml
@@ -79,11 +79,30 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
+        <!---->
         <dependency>
             <groupId>org.apache.geronimo.bundles</groupId>
             <artifactId>aspectjweaver</artifactId>
             <version>1.6.8_2</version>
+        </dependency>
+
+        <!--spring 返回object类型json支持-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.7.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.7.4</version>
         </dependency>
 
         <!--mybatis依赖 -->
