--- a/java核心技术学习整理-2/项目/taotao/manager/web/src/main/resources/resource/resources.properties
+++ b/java核心技术学习整理-2/项目/taotao/manager/web/src/main/resources/resource/resources.properties
@@ -1,9 +1,9 @@
 #FTP相关配置
-FTP_ADDRESS=192.168.43.137
+FTP_ADDRESS=192.168.42.137
 FTP_PORT=21
-FTP_USERNAME=ftpuser
+FTP_USERNAME=what
 FTP_PASSWORD=meiyoumima
-FTP_BASE_PATH=/write
+FTP_BASE_PATH=/write/image
 
 #图片服务器的基础配置
-IMG_BASE_URL
+IMG_BASE_URL=http://192.168.42.137/image
