taotao商城第六天完成

--- a/java核心技术学习整理-2/项目/taotao/portal/src/main/resources/resource/resources.properties
+++ b/java核心技术学习整理-2/项目/taotao/portal/src/main/resources/resource/resources.properties
@@ -7,3 +7,8 @@ FTP_BASE_PATH=/write/image
 
 #图片服务器的基础配置
 IMG_BASE_URL=http://192.168.42.137/image
+
+#服务层基础url
+REST_BASE_URL=http://localhost:8082/rest/
+#首页大广告位url
+REST_INDEX_AD_URL=/content/list/89
