--- a/java核心技术学习整理-2/项目/taotao/rest/src/main/resources/resource/resources.properties
+++ b/java核心技术学习整理-2/项目/taotao/rest/src/main/resources/resource/resources.properties
@@ -7,3 +7,7 @@ FTP_BASE_PATH=/write/image
 
 #图片服务器的基础配置
 IMG_BASE_URL=http://192.168.42.137/image
+
+
+#首页内容信息在redis中保存的key
+INDEX_CONTENT_REDIS_KEY=INDEX_CONTENT_REDIS_KEY
