--- a/蚂蚁课堂-美特学院-第二期/08-Socket网络通讯基础/socketDemo/pom.xml
+++ b/蚂蚁课堂-美特学院-第二期/08-Socket网络通讯基础/socketDemo/pom.xml
@@ -7,14 +7,18 @@
     <groupId>com</groupId>
     <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-    <dependencies>
-        <!-- https://mvnrepository.com/artifact/cglib/cglib -->
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.2.8</version>
-        </dependency>
 
-    </dependencies>
 </project>
