--- a/java核心技术学习整理-2/mybatis/mybatisGenerator/pom.xml
+++ b/java核心技术学习整理-2/mybatis/mybatisGenerator/pom.xml
@@ -10,6 +10,14 @@
 
     <dependencies>
 
+        <!-- 引入sqlserver数据库链接包 -->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>sqljdbc4</artifactId>
+            <version>4.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
