--- a/蚂蚁课堂-美特学院-第二期/27-SpringBoot基础/demo01/src/main/resources/application.properties
+++ b/蚂蚁课堂-美特学院-第二期/27-SpringBoot基础/demo01/src/main/resources/application.properties
@@ -1,10 +1,21 @@
-#test01数据库连接
+server.port=9999
+#spring-test01数据库连接
 spring.datasource.test1.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.test1.url=jdbc:mysql://localhost:3306/test01?useUnicode=true&characterEncoding=utf-8
 spring.datasource.test1.username=root
 spring.datasource.test1.password=
-#test02数据库连接
+#spring-test02数据库连接
 spring.datasource.test2.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.test2.url=jdbc:mysql://localhost:3306/test02?useUnicode=true&characterEncoding=utf-8
 spring.datasource.test2.username=root
 spring.datasource.test2.password=
+#mysql-test01数据库连接
+mysql.datasource.test1.driverClassName=com.mysql.jdbc.Driver
+mysql.datasource.test1.url=jdbc:mysql://localhost:3306/test01?useUnicode=true&characterEncoding=utf-8
+mysql.datasource.test1.username=root
+mysql.datasource.test1.password=
+#mysql-test02数据库连接
+mysql.datasource.test2.driverClassName=com.mysql.jdbc.Driver
+mysql.datasource.test2.url=jdbc:mysql://localhost:3306/test02?useUnicode=true&characterEncoding=utf-8
+mysql.datasource.test2.username=root
+mysql.datasource.test2.password=
