--- a/蚂蚁课堂-美特学院-第二期/27-SpringBoot基础/demo01/pom.xml
+++ b/蚂蚁课堂-美特学院-第二期/27-SpringBoot基础/demo01/pom.xml
@@ -29,7 +29,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -76,10 +79,6 @@
             <artifactId>spring-boot-starter-jta-atomikos</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-tomcat</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -90,6 +89,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
