--- a/框架工具学习/MQ/activeMQ/springbootMQ/pom.xml
+++ b/框架工具学习/MQ/activeMQ/springbootMQ/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.example</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>com.ll</groupId>
+	<artifactId>springbootmq</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
+	<name>springbootmq</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -36,10 +36,16 @@
 			<scope>test</scope>
 		</dependency>
 
-
+		<!-- activemq -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+
+		<!--  启用JMS 的池化, 就一定要加上这个 jar-->
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-pool</artifactId>
 		</dependency>
 	</dependencies>
 
