--- a/框架工具学习/MQ/activeMQ/springbootMQ/src/main/resources/application.properties
+++ b/框架工具学习/MQ/activeMQ/springbootMQ/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-spring.messages.basename=i18n/Messages,i18n/Pages
-# 配置消息的类型，如果是true则表示为topic消息，如果为false表示Queue消息
-spring.jms.pub-sub-domain=false
-# 连接用户名
-spring.activemq.user=admin
-# 连接密码
-spring.activemq.password=admin
-# 消息组件的连接主机信息
+spring.jms.pub-sub-domain=true
+
 spring.activemq.broker-url=tcp://192.168.10.150:61616
+#spring.activemq.broker-url=failover:(tcp://localhost:61616,tcp://localhost:61617)
+spring.activemq.user=admin
+spring.activemq.password=admin
+spring.activemq.pool.enabled=true
+spring.activemq.in-memory=true
+spring.activemq.pool.max-connections=100
+spring.activemq.close-timeout=5000
+spring.activemq.send-timeout=3000
+spring.activemq.pool.idle-timeout=30000
+# See PooledConnectionFactory.
+spring.activemq.pool.configuration.*=
+
+
+
