--- a/框架工具学习/spring cloud/testspringcloud/service-member/pom.xml
+++ b/框架工具学习/spring cloud/testspringcloud/service-member/pom.xml
@@ -35,6 +35,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
