完成spring eureka 学习笔记

--- a/框架工具学习/spring cloud/testspringcloud/service-order/src/main/resources/application.properties
+++ b/框架工具学习/spring cloud/testspringcloud/service-order/src/main/resources/application.properties
@@ -4,3 +4,11 @@ server.port=9100
 spring.application.name=service-order
 #设置服务注册中心的URL，本服务要向该服务注册中心注册自己
 eureka.client.serviceUrl.defaultZone=http://localhost:2222/eureka
+
+
+spring.cloud.config.label=master
+spring.cloud.config.profile=dev
+spring.cloud.config.uri= http://localhost:8888/
+
+
+
