--- a/框架工具学习/spring cloud/testspringcloud/server-eureka/src/main/resources/application.properties
+++ b/框架工具学习/spring cloud/testspringcloud/server-eureka/src/main/resources/application.properties
@@ -10,3 +10,5 @@ eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 #设置服务注册中心的URL
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
+#关闭自我保护
+eureka.server.enable-self-preservation=false
