--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /蚂蚁课堂-美特学院-第二期/03-多线程之间的通信/ThreadDemo/ThreadDemo.iml
 /蚂蚁课堂-美特学院-第二期/03-多线程之间的通信/ThreadDemo/.idea
 /蚂蚁课堂-美特学院-第二期/03-多线程之间的通信/ThreadDemo/target
+/project-combat/itmayi/shop-parent/shop-core/target
