--- a/project-combat/leyou/ly-upload/pom.xml
+++ b/project-combat/leyou/ly-upload/pom.xml
@@ -28,8 +28,9 @@
         </dependency>
 
         <dependency>
-            <groupId></groupId>
-            <artifactId>spring-boot-test</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
