--- a/project-combat/financial/swagger/pom.xml
+++ b/project-combat/financial/swagger/pom.xml
@@ -12,5 +12,17 @@
     <groupId>com.imooc</groupId>
     <artifactId>swagger</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${springfox-swagger2.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${springfox-swagger-ui.version}</version>
+        </dependency>
+    </dependencies>
 </project>
