--- a/project-combat/financial/util/pom.xml
+++ b/project-combat/financial/util/pom.xml
@@ -12,5 +12,18 @@
     <groupId>com.imooc</groupId>
     <artifactId>util</artifactId>
 
+    <dependencies>
+        <!-- apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${apache.commons.lang3.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+    </dependencies>
 </project>
