--- a/project-combat/financial/manager/pom.xml
+++ b/project-combat/financial/manager/pom.xml
@@ -20,6 +20,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>util</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>swagger</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
