--- a/project-combat/financial/pom.xml
+++ b/project-combat/financial/pom.xml
@@ -30,9 +30,11 @@
         <java.version>1.8</java.version>
         <mysql.version>8.0.13</mysql.version>
         <apache.commons.lang3.version>3.8.1</apache.commons.lang3.version>
+        <fastjson.version>1.2.54</fastjson.version>
+        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
+        <springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
 
     </properties>
-
 
 
     <dependencyManagement>
@@ -50,6 +52,26 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${apache.commons.lang3.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${springfox-swagger2.version}</version>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${springfox-swagger-ui.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
