--- a/project-combat/financial/pom.xml
+++ b/project-combat/financial/pom.xml
@@ -33,6 +33,7 @@
         <fastjson.version>1.2.54</fastjson.version>
         <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
         <springfox-swagger-ui.version>2.7.0</springfox-swagger-ui.version>
+        <jsonrpc4j.version>1.5.0</jsonrpc4j.version>
 
     </properties>
 
@@ -70,6 +71,12 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger-ui</artifactId>
                 <version>${springfox-swagger-ui.version}</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/com.github.briandilley.jsonrpc4j/jsonrpc4j -->
+            <dependency>
+                <groupId>com.github.briandilley.jsonrpc4j</groupId>
+                <artifactId>jsonrpc4j</artifactId>
+                <version>${jsonrpc4j.version}</version>
             </dependency>
 
         </dependencies>
